delete route created
